[package]
name = "webrtc-util"
version = "0.0.0"
authors = ["Rain Liu <yliu@ngr.tc>"]
edition = "2018"
description = "A pure Rust implementation of UTIL"
license = "MIT"
documentation = "https://docs.rs/webrtc-util"
homepage = "https://webrtc.rs"
repository = "https://github.com/ngr-tc/webrtc-util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
